<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.diego.slidle.SettingsActivity"
    tools:showIn="@layout/activity_settings"
    android:background="@color/primary_light">

    <Button
        android:text="@string/selImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSelImage"
        android:background="@color/colorAccent"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnJugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/init"
        android:layout_above="@+id/lblCopy"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp" />

    <TextView
        android:text="@string/numTiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/lblTitulo" />


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rdgTiles"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:text="@string/tiles3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbt8tiles"
            android:layout_marginTop="93dp"
            android:layout_below="@+id/radioGroup2"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:checked="true" />

        <RadioButton
            android:text="@string/tiles6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbt36tiles"
            android:layout_below="@+id/rbt8tiles"
            android:layout_alignStart="@+id/rbt8tiles"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/tiles9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbt80tiles"
            android:layout_below="@+id/rbt8tiles"
            android:layout_alignStart="@+id/rbt8tiles"
            android:layout_weight="1" />
    </RadioGroup>

    <TextView
        android:text="@string/copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblCopy"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/imvImagen"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="right"
        android:layout_alignBottom="@+id/rdgTiles"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
